Constraint added: user email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.h2.console.settings.web-allow-others=true
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.hikari.username=${DB_USERNAME:root}
 spring.datasource.hikari.password=${DB_PASSWORD:Password}
 spring.datasource.hikari.connectionTimeout=100000
