--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.maxLifetime=180000
 spring.datasource.hikari.auto-commit=true
-spring.datasource.hikari.jdbcUrl=${DB_JDBC_URL:jdbc:mysql://localhost:13306/data?serverTimezone=UTC&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false)
+spring.datasource.hikari.jdbcUrl=jdbc:mysql://localhost:13306/data?serverTimezone=UTC&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.hikari.driverClassName=com.mysql.cj.jdbc.Driver
 
 
