--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,15 +14,21 @@ spring.jpa.open-in-view=false
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.hikari.username=${DB_USERNAME:root}
-spring.datasource.hikari.password=${DB_PASSWORD:Password}
+#spring.datasource.hikari.username=${DB_USERNAME:root}
+#spring.datasource.hikari.password=${DB_PASSWORD:Password}
 spring.datasource.hikari.connectionTimeout=100000
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.maxLifetime=180000
+#spring.datasource.hikari.auto-commit=true
+#spring.datasource.hikari.jdbcUrl=jdbc:mysql://localhost:13306/data?serverTimezone=UTC&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.hikari.driverClassName=com.mysql.cj.jdbc.Driver
+
+spring.datasource.hikari.username=sa
+spring.datasource.hikari.password=
 spring.datasource.hikari.auto-commit=true
-spring.datasource.hikari.jdbcUrl=jdbc:mysql://localhost:13306/data?serverTimezone=UTC&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.hikari.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbcUrl=jdbc:h2:file:./sample-rest-be-fca
+spring.datasource.hikari.driverClassName=org.h2.Driver
 
 
 
